[package]
name = "as7331-rs"
version = "0.1.2"
authors = ["sebastian@ohl.name", "tuemb <nvtu96@gmail.com>"]
edition = "2021"
description = "as7331 driver in Rust for embedded devices"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sebastianohl/as7331-rs"
rust-version = "1.77"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-hal = { version = "0.44.1", default-features = false }
embedded-hal = { version = "1.0.0" }
